# ytp-devcontainer

./: .envrc  .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  devbox.json  rust-toolchain.toml  ytp-devcontainer-integration-guide.md
.devcontainer/: Dockerfile  README.md  bootstrap-project.sh.bak  cache-warmup.sh  devcontainer.json  devcontainer.json.prebuilt  initialize.sh  postAttach.sh  postCreate-prebuilt.sh  postCreate.sh  setup-nix.sh  troubleshoot.sh
.github/workflows/: build-dev-image.yml
git/scm0/: input
src/: main.rs
