[package]
name = "ytp-devcontainer"
version = "0.1.2"
edition = "2024"
authors = ["Steven Zimmerman"]
description = "YTP Dev Container"
license = "Apache-2.0 OR MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0" 