[package]
name = "ytp-devcontainer"
version = "0.1.3"
edition = "2021"
authors = ["Steven Zimmerman"]
description = "YTP Dev Container"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0" 